# app-security

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  linux_security_audit.sh  utils.sh
app/backend/: .coverage  Dockerfile  README.md  app_security_audit.db  install_systemd.sh  pyproject.toml  requirements.txt
app/backend/app/: main.py
app/backend/app/collectors/: linux.py
app/backend/app/config/: rules.json
app/backend/app/core/: auth.py  config.py  errors.py  logging.py
app/backend/app/db/: models.py  session.py
app/backend/app/schemas/: scan.py
app/backend/app/services/: _checks.py  _firewall.py  (+10 more)
app/backend/app_security_audit_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/backend/tests/: conftest.py  test_agent_client.py  test_api_integration.py  test_business_rules.py  test_checks.py  test_collectors.py  test_collectors_extra.py  test_collectors_snapshot.py  test_config.py  test_config_full.py  test_containers.py  test_db_context.py  test_db_integration.py  test_db_session.py  test_db_session_full.py  test_errors.py  test_exporter.py  test_exporter_full.py  test_firewall.py  test_firewall_extra.py  test_firewall_scoring.py  test_health.py  test_identity_checker.py  test_logging.py  test_models.py  test_models_full.py  test_network.py  test_network_checker.py  test_parser.py  test_parser_extra.py  test_recommendations.py  test_rules_api.py  test_rules_business.py  test_scan_service.py  test_scan_service_extra.py  test_scan_service_full.py  test_scans_api.py  test_schemas.py  test_scoring.py  test_scoring_extra.py  (+5 more)
(+83 files in other folders)
